# pebble

./: .gitattributes  .gitignore  .npmrc  .oxlintrc.json  AGENTS.md  ANALYSIS.zh-CN.md  README.md  ROADMAP.md  components.json  electron.vite.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.web.config.ts
.github/: CONTRIBUTING.md  RELEASE_SIGNING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  other.yml
.github/scripts/: render-readme-downloads-badge.mjs
.github/workflows/: computer-e2e.yml  e2e.yml  golden-e2e-experiment.yml  homebrew-bump.yml  linux-wayland-gpu-sandbox.yml  mobile-android-release.yml  mobile-ios-release.yml  mobile.yml  pr.yml  readme-downloads-badge.yml  release-cut.yml  release-mac-build.yml  tauri-desktop-release.yml  terminal-perf.yml  track-community-prs.yaml
Casks/: pebble.rb  pebble@rc.rb
apps/desktop/: package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/src/: macos_native_quit.rs  main.rs  native_quit.rs  packaged_cli.rs  primary_window.rs  termination_signal.rs  window_chrome.rs  window_state.rs  windows_system_tray.rs  zig_system.rs
apps/desktop/src-tauri/src/commands/: agent_accounts.rs  agent_awake.rs  agent_hooks.rs  agent_hooks_antigravity.rs  agent_hooks_command_code.rs  agent_hooks_hermes.rs  agent_trust.rs  app_native.rs  browser_annotation_overlay.rs  browser_capture_save.rs  browser_child_webview.rs  browser_cookie_source_import.rs  browser_cookies.rs  browser_detection.rs  browser_device_access.rs  browser_download_file_progress.rs  browser_full_page_screenshot.rs  browser_guest_evaluate.rs  browser_http_auth.rs  browser_native_drag_macos.rs  browser_native_input.rs  browser_native_input_linux.rs  browser_native_input_macos.rs  browser_native_input_windows.rs  browser_native_key_macos.rs  browser_navigation_interception.rs  browser_permission_overrides.rs  browser_permission_policy.rs  browser_process_failure.rs  browser_request_control.rs  browser_screencast.rs  browser_screencast_dirty.rs  browser_screencast_forward.rs  browser_script_dialog.rs  browser_subresource_interception_windows.rs  browser_upload_files.rs  browser_video_recording.rs  browser_webkit_document_request_control.rs  browser_webview_download_linux.rs  browser_webview_download_macos.rs  (+81 more)
apps/mobile/: .gitignore  .oxlintrc.json  README.md  issue-5049-unresponsive-session-findings.md  mobile-terminal-direct-input-default.md  mock-homepage.html  mock-tasks.html  package.json  pnpm-lock.yaml  terminal-output-streaming-findings.md
config/: dev-app-update.yml  electron-builder.config.cjs  localization-audit.md  reliability-gates.jsonc  tsconfig.base.json  tsconfig.cli.json  tsconfig.node.json  tsconfig.relay.json  tsconfig.tc.cli.json  tsconfig.tc.web.json  tsconfig.web.json  vitest-local-storage-compat.ts  vitest.config.ts
config/scripts/: audit-localization-coverage.mjs  benchmark-artifact-comparison.test.mjs  build-computer-macos.mjs  build-relay.mjs  check-reliability-gates.test.mjs  check-styled-scrollbars.mjs  check-styled-scrollbars.test.mjs  check-tauri-pixel-performance-gate.mjs  check-tauri-pixel-performance-gate.test.mjs  check-terminal-perf-report-budgets.mjs  check-terminal-perf-report-budgets.test.mjs  clean-pebble-generated-artifacts.mjs  clean-pebble-generated-artifacts.test.mjs  compare-desktop-parity-screenshots.mjs  (+139 more)
docs/: STYLEGUIDE.md  android-emulation-streaming.md  android-emulation.md  browser-normal-download-behavior.md  claude-fable-weekly-usage-meter.md  claude-usage-tracking-codexbar-parity.md  configurable-open-in-menu.md  delete-workspace-windows-unregistered.md  double-tap-modifier-keybindings-design.md  droid-orchestration-group.md  failed-automation-rerun-action.md  floating-terminal-panel-position-persistence.md  github-tasks-close-reason-parity.md  image-viewer-pinch-zoom.md  linear-issues-load-more.md  linear-scope-selector.md  native-chat-codex-tui-parity.md  new-worktree-sidebar-reveal.md  orchestration-reset-scope-validation.md  persist-tree-view-source-control.md  refresh-github-issues-after-create.md  remote-web-paste-activity-fixes.md  renderer-memory-profile-2026-06-01.md  show-full-tab-title-tooltip.md  ssh-config-target-compatibility.md  ssh-handler-reregistration-port-forwards.md  terminal-main-owned-state.md  terminal-scroll-intent-architecture.md  windows-secure-file-acl-hardening.md  worktree-delete-preflight.md
mobile/: README.md  app.json  issue-5049-unresponsive-session-findings.md  mock-tasks.html  terminal-output-streaming-findings.md
notes/: pebble-serve-terminal-persistence.md  windows-perf-progress.md
pebble/: README.md
pebble/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
pebble/desktop-tauri/src-tauri/src/: main.rs  window_chrome.rs
pebble/desktop-tauri/src-tauri/src/commands/: agent_accounts.rs  agent_hooks.rs  agent_hooks_amp.rs  agent_hooks_antigravity.rs  agent_hooks_codex.rs  agent_hooks_copilot.rs  agent_hooks_cursor.rs  agent_hooks_devin.rs  agent_hooks_droid.rs  agent_hooks_gemini.rs  agent_hooks_grok.rs  agent_hooks_hermes_plugin.py  agent_hooks_kimi.rs  app_native.rs  browser_child_webview.rs  browser_cookie_source_import.rs  browser_cookies.rs  browser_guest_evaluate.rs  browser_guest_find.rs  browser_webview_download_windows.rs  browser_webview_screenshot.rs  cli_registration.rs  cli_registration_windows.rs  clipboard.rs  computer_permissions.rs  computer_use_action_translation.rs  computer_use_helper_socket.rs  computer_use_provider.rs  crash_reports.rs  deep_link.rs  developer_permissions.rs  diagnostics.rs  emulator_android_adb.rs  emulator_android_provider.rs  emulator_ios_provider.rs  emulator_ios_simctl.rs  filesystem_watch.rs  git_refs.rs  hooks.rs  mod.rs  (+17 more)
previews/: mobile-driver-overlay-preview.html
tests/: .gitignore  playwright.config.ts
(+2910 files in other folders)
