[package]
name = "pebble-desktop-tauri"
version = "1.4.124-rc.8"
edition = "2021"
publish = false
default-run = "pebble-desktop-tauri"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
aes = "0.8"
aes-gcm = "0.10"
arboard = "3.6"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
cookie = "0.18"
crypto_box = { version = "0.9", features = ["std"] }
futures-util = "0.3"
# OS-native credential storage for the OpenAI speech API key. linux-native uses
# kernel keyutils (no dbus system dependency); see speech_openai_key_store.rs
# for the Linux persistence caveat.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
libc = "0.2"
minisign-verify = "0.2.5"
notify = "6"
pbkdf2 = "0.12"
pebble-rust-host = { path = "../../../native/rust-host" }
quick-xml = "0.39.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "multipart",
  "rustls-tls",
  "stream"
] }
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
json5 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# Speech model archives are integrity-verified before feeding native parsers.
sha2 = "0.10"
sha1 = "0.10"
sysinfo = "0.33"
# Local speech inference (sherpa-onnx). The catalog's local models are ONNX
# bundles, matching Electron's sherpa-onnx worker; "sys" exposes the online
# (streaming) C API that the high-level crate does not wrap.
sherpa-rs = { version = "0.6.8", optional = true, default-features = false, features = [
  "download-binaries",
  "sys"
] }
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = [
  "connect",
  "rustls-tls-webpki-roots"
] }
time = "0.3"
tempfile = "3.27.0"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"

[target.'cfg(target_os = "macos")'.dependencies]
# Traffic-light repositioning goes through the raw NSWindow handle; these are
# already in the tree via tauri's macOS runtime, pinned to match Cargo.lock.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-core-graphics = "0.3"
objc2-foundation = "0.3"
block2 = "0.6"
objc2-web-kit = { version = "0.3", features = [
  "block2",
  "WKDownload",
  "WKFrameInfo",
  "WKNavigationDelegate",
  "WKPDFConfiguration",
  "WKSnapshotConfiguration",
  "WKUIDelegate",
  "WKWebView"
] }

[target.'cfg(target_os = "linux")'.dependencies]
cairo-rs = { version = "0.18.5", features = ["png"] }
gio = "0.18.4"
gdk = "0.18.2"
glib = "0.18.5"
gtk = "0.18.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
webkit2gtk = "2.0.2"

[target.'cfg(target_os = "windows")'.dependencies]
# CLI registration reads/writes HKCU\Environment\Path (winreg) and broadcasts
# WM_SETTINGCHANGE so open shells pick it up without a logout (windows-sys).
# Both are already in the dependency tree via tauri's Windows runtime.
winreg = "0.55"
wait-timeout = "0.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
webview2-com = "0.38.2"
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage"
] }
windows-sys = { version = "0.60", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }

[features]
default = ["local-speech"]
# Local sherpa-onnx speech inference. Building sherpa-rs-sys downloads a
# prebuilt sherpa-onnx binary for the host target; disable the feature to
# build without network access — local dictation then reports a typed gap.
local-speech = ["dep:sherpa-rs"]
