[package]
name = "pebble-desktop-tauri"
version = "0.1.0"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
crypto_box = { version = "0.9", features = ["std"] }
futures-util = "0.3"
libc = "0.2"
notify = "6"
pebble-rust-host = { path = "../../rust-host" }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Traffic-light repositioning goes through the raw NSWindow handle; these are
# already in the tree via tauri's macOS runtime, pinned to match Cargo.lock.
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

[dev-dependencies]
tempfile = "3.27.0"
