[package]
name = "pebble-desktop-tauri"
version = "0.1.0"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
cookie = "0.18"
crypto_box = { version = "0.9", features = ["std"] }
futures-util = "0.3"
# OS-native credential storage for the OpenAI speech API key. linux-native uses
# kernel keyutils (no dbus system dependency); see speech_openai_key_store.rs
# for the Linux persistence caveat.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
libc = "0.2"
notify = "6"
pebble-rust-host = { path = "../../rust-host" }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
json5 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Speech model archives are integrity-verified before feeding native parsers.
sha2 = "0.10"
# Local speech inference (sherpa-onnx). The catalog's local models are ONNX
# bundles, matching Electron's sherpa-onnx worker; "sys" exposes the online
# (streaming) C API that the high-level crate does not wrap.
sherpa-rs = { version = "0.6.8", optional = true, default-features = false, features = ["download-binaries", "sys"] }
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
time = "0.3"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Traffic-light repositioning goes through the raw NSWindow handle; these are
# already in the tree via tauri's macOS runtime, pinned to match Cargo.lock.
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
cairo-rs = { version = "0.18.5", features = ["png"] }
gio = "0.18.4"
glib = "0.18.5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
webkit2gtk = "2.0.2"

[target.'cfg(target_os = "windows")'.dependencies]
# CLI registration reads/writes HKCU\Environment\Path (winreg) and broadcasts
# WM_SETTINGCHANGE so open shells pick it up without a logout (windows-sys).
# Both are already in the dependency tree via tauri's Windows runtime.
winreg = "0.55"
wait-timeout = "0.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
webview2-com = "0.38.2"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_Com_StructuredStorage"] }
windows-sys = { version = "0.60", features = ["Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = "3.27.0"

[features]
default = ["local-speech"]
# Local sherpa-onnx speech inference. Building sherpa-rs-sys downloads a
# prebuilt sherpa-onnx binary for the host target; disable the feature to
# build without network access — local dictation then reports a typed gap.
local-speech = ["dep:sherpa-rs"]
